# study_nginx

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old
objs/: CMakeLists.txt  Makefile  autoconf.err  ngx_auto_config.h  ngx_modules.c
src/os/unix/: ngx_posix_init.c
